# stoa

./: Cargo.toml  README.md  benchmark.sh
.github/workflows/: ci.yml
benches/: perf.rs
egui/: Cargo.toml
egui/src/: app.rs  main.rs  streaming.rs  theme.rs
egui/src/api/: anthropic.rs
egui/src/ui/: bottom_bar.rs  chat_view.rs  input_bar.rs  right_panel.rs  settings.rs  sidebar.rs
iced/: Cargo.toml
iced/src/ui/: right_panel.rs  settings.rs
makepad/: Cargo.toml
makepad/src/: app.rs  main.rs  widgets.rs
makepad/src/api/: anthropic.rs
src/: app.rs  commands.rs  config.rs  cost.rs  db.rs  diff.rs  export.rs  import.rs  lib.rs  main.rs  model.rs  shortcuts.rs  theme.rs  web_search.rs
src/api/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src/handlers/: mod.rs  send.rs  streaming.rs
src/ui/: analytics.rs  bottom_bar.rs  chat_view.rs  command_palette.rs  diagnostics.rs  input_bar.rs  markdown.rs  mod.rs  quick_switcher.rs  right_panel.rs  settings.rs  shortcut_help.rs  sidebar.rs
tests/: integration_tests.rs
