[package]
name = "stoa"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
async-stream = "0.3"
pulldown-cmark = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
rfd = "0.15"
