[package]
name = "rust-chat-egui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rust-chat-egui"
path = "src/main.rs"

[dependencies]
eframe = "0.31"
egui = "0.31"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
async-stream = "0.3"
